some analysis adjustments